# wasm_heic

./: .gitignore  Cargo.toml  README.md  heic.d.ts  heic.mjs  heic.wasm.br  heic_for_importScripts.js  heic_worker.d.ts  heic_worker.mjs  heic_worker_script.mjs  heif_worker_script.js  photo_example_apple.heic  photo_example_samsung.heic  test.html
src/: lib.rs
